# Twitter-Clone

./: pyproject.toml
authentication/: forms.py  views.py
notification/: models.py  views.py
notification/migrations/: 0001_initial.py  0002_auto_20210605_2052.py
templates/: index.html  login.html  notif.html  profile.html  signup.html  tweetdetail.html  tweets.html
tweet/: forms.py  models.py  views.py
tweet/migrations/: 0001_initial.py  0002_alter_tweets_tweet.py  0003_tweets_time_posted.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  models.py  views.py
twitteruser/migrations/: 0001_initial.py  0002_following.py  0003_alter_following_follow.py  0004_auto_20210602_2136.py  0005_following_count.py  0006_alter_following_follow.py  0007_alter_following_follow.py  0008_auto_20210604_1820.py
